# lupus

./: .env.example  .gitignore  README.md
base/: config.yaml
daemon/: Cargo.toml
daemon/.cargo/: config.toml
daemon/examples/: agent_smoke.rs  eval_smoke.rs  inference_smoke.rs  security_smoke.rs
daemon/scripts/: devshell.ps1
daemon/src/: agent.rs  config.rs  crawler.rs  daemon.rs  den.rs  error.rs  index.rs  ipfs.rs  lib.rs  main.rs  protocol.rs  protocol_codes.rs  security.rs  server.rs
daemon/src/agent/: executor.rs  inference.rs  joinner.rs  plan.rs  prompt.rs
daemon/src/host_rpc/: mock.rs  mod.rs
daemon/src/tools/: crawl_index.rs  extract_content.rs  fetch_page.rs  mod.rs  scan_security.rs  search_local.rs  search_subnet.rs
daemon/tests/: joinner_golden.rs  parser_golden.rs
daemon/tests/fixtures/: joinner_cases.json  joinner_outputs.md
datasets/folklore/: README.md
datasets/folklore/tales/aesop/: boy-who-cried-wolf.json  dog-and-wolf.json  hares-and-frogs.json  tortoise-and-hare.json  wolf-and-crane.json  wolf-and-lamb.json  wolf-in-sheeps-clothing.json
datasets/folklore/tales/anishinaabe/: nanabozho-and-maiingan.json  nanabozho-and-nokomis.json  nanabozho-birch-bark-markings.json  nanabozho-cedar-medicine.json  nanabozho-dancing-ducks.json  nanabozho-flood-earth-diver.json  nanabozho-maple-sugar.json  nanabozho-wolf-nephew.json
datasets/folklore/tales/egyptian/: anubis-guide-of-the-dead.json  hieroglyph-wn-hare-being.json  khentyamentiu-foremost-of-westerners.json  lycopolis-wolf-city.json  wenet-hare-goddess.json  wepwawet-opener-of-ways.json  wepwawet-standard.json
datasets/folklore/tales/japanese/: inaba-no-shirousagi.json  kachi-kachi-yama.json  last-wolf-of-honshu.json  mitsumine-sacred-wolves.json  okuri-okami.json  tsuki-no-usagi.json  yama-no-kami-wolves.json
datasets/folklore/tales/russian/: grey-wolf-prince-ivan.json  leshy-and-his-wolves.json  spring-hare-slavic-belief.json  st-george-wolf-shepherd.json  wolf-and-seven-young-goats.json  wolves-of-velja-noc.json  zaikina-izbushka.json
datasets/search/: README.md  planner_train.jsonl  schema.py
datasets/search/examples/: knowledge_aware.jsonl
datasets/security/: README.md  build_dataset.py  schema.py
datasets/security/fetch/: __init__.py  html_fetcher.py  openphish.py  phishing_database.py  phishtank.py  tranco.py  urlhaus.py
docs/: DAEMON.md  DAEMON_DEV_SETUP.md  LEPUS_CONNECTORS.md  LUPUS_TOOLS.md  TINYAGENT_EVAL.md  TINYAGENT_PHASE1_FINDINGS.md  TINYAGENT_PHASE5_FINDINGS.md  TINYAGENT_STEPA_FINDINGS.md  TINYAGENT_STEPB_FINDINGS.md  TINYAGENT_STEPC_FINDINGS.md  TRAINING_STRATEGY.md
eval/tinyagent_runs/: 20260407-225450-eval.jsonl  20260407-232422-eval.jsonl  20260408-111025-eval.jsonl
tools/: __init__.py  build_planner_dataset.py  dump_planner_prompt.py  eval_tinyagent.py  lupus_tool_rag.py  runpod_deploy.py  runpod_status.py  test_security_model.py  tinyagent_prompt_probe.py
training/: README.md  RUNBOOK.md  __init__.py  pull_model.py  push_dataset.py  requirements.txt  s3_utils.py  setup_pod.sh  train_planner.py  train_security.py
