[package]
name = "lupus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Lupus pathfinder daemon — local AI search, security scanning, and IPFS indexing for Lepus"

[[bin]]
name = "lupus"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server for IPC with Lepus browser
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Platform directories (~/.config, ~/.local/share, %APPDATA%, etc.)
dirs = "5"

# Regex matching — used by the LLMCompiler plan parser to extract numbered
# tool calls from the planner LoRA's output. The regex is intricate enough
# (anchors, optional sentinels, optional comments) that hand-rolling it
# invites drift from the Python reference at tools/eval_tinyagent.py.
regex = "1"

# ML inference via llama.cpp bindings. Pulls llama.cpp source as a transitive
# dep and builds it from source via cmake during the build script. Requires
# the dev shell from daemon/scripts/devshell.ps1 (cmake + cl.exe + Windows
# SDK on PATH). See docs/DAEMON_DEV_SETUP.md for setup; this is the only
# crate in the daemon that needs C++ compilation.
llama-cpp-2 = "0.1"

# IPFS client via Iroh (pure Rust, lightweight)
# Uncomment when ready to integrate IPFS:
# iroh = "0.28"

[workspace]
