[package]
name = "lupus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Lupus pathfinder daemon — local AI search, security scanning, and IPFS indexing for Lepus"

[[bin]]
name = "lupus"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server for IPC with Lepus browser
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Platform directories (~/.config, ~/.local/share, %APPDATA%, etc.)
dirs = "5"

# Regex matching — used by the LLMCompiler plan parser to extract numbered
# tool calls from the planner LoRA's output. The regex is intricate enough
# (anchors, optional sentinels, optional comments) that hand-rolling it
# invites drift from the Python reference at tools/eval_tinyagent.py.
regex = "1"

# ML inference via llama.cpp bindings. Pulls llama.cpp source as a transitive
# dep and builds it from source via cmake during the build script. Requires
# the dev shell from daemon/scripts/devshell.ps1 (cmake + cl.exe + Windows
# SDK on PATH). See docs/DAEMON_DEV_SETUP.md for setup; this is the only
# crate in the daemon that needs C++ compilation.
llama-cpp-2 = "0.1"

# Pure-Rust ML for the security classifier. The Qwen v0.3 security model is
# trained as `Qwen2ForSequenceClassification` (3-class: safe/phishing/malware)
# and llama-cpp-2's GGUF path can't load classification heads — only causal
# LMs. Candle loads the safetensors directly and gives us hidden states from
# the Qwen2 trunk that we project through a custom Linear(896, 3) head built
# from the `score.weight` tensor in the checkpoint. See daemon/src/security.rs.
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"

# HuggingFace tokenizers (Rust). Loads `tokenizer.json` directly — must match
# the tokenizer used during training (Qwen2.5-Coder-0.5B base). The security
# model's tokenizer files live in dist/lupus-security/ alongside the weights.
#
# default-features = false drops the `esaxx_fast` feature, which would
# otherwise pull in `esaxx-rs` (a C++ suffix-array trainer for Unigram
# tokenizers). On Windows MSVC, esaxx-rs hardcodes the static CRT (/MT)
# while llama-cpp-sys-2 builds with the dynamic CRT (/MD), causing
# LNK2038 RuntimeLibrary mismatches at link time. We don't TRAIN
# tokenizers — we only LOAD a pre-trained Qwen2 BPE tokenizer.json and
# encode strings — so esaxx is dead weight regardless. `onig` stays
# enabled because the BPE pre-tokenizer regex relies on it.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# Local content-addressed blob store via iroh-blobs. Phase 3 uses ONLY
# the FsStore (local-only, no networking, no peers, no gossip layer).
# The default features include `rpc` which would pull in iroh's QUIC +
# TLS stack — we drop it to keep the daemon network-free until Phase 5,
# avoid pulling in aws-lc-sys (NASM dependency on Windows MSVC), and
# keep the build small.
#
# README warning: iroh-blobs 0.99 is not yet considered production
# quality (the team recommends 0.35 for production). For Lupus alpha
# this is acceptable — we use only the FsStore (which has been stable
# since iroh-blobs 0.1) and our networking layer doesn't come online
# until Phase 5. See docs/LUPUS_TOOLS.md §4.4.
iroh-blobs = { version = "0.99", default-features = false, features = ["fs-store"] }

# Bytes type — used by the iroh-blobs API for blob payloads.
bytes = "1"

[dev-dependencies]
# SHA-256 for the prompt-snapshot test that pins the byte-equivalence
# contract between the Python eval and the Rust planner prompt port.
sha2 = "0.10"

[workspace]
